--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "sweetalert": "^2.1.2",
     "vue": "^3.2.13",
